--- a/src/layout/SideBar/ExpansionPanel/expansionPanel.module.css
+++ b/src/layout/SideBar/ExpansionPanel/expansionPanel.module.css
@@ -23,11 +23,12 @@
 .btn {
     width: 100%;
     border: none;
-    background-color: transparent;
+    background-color: #287cf2;
 }
 
 .btn:hover {
-    background-color: rgba(255, 255, 255, 0.08);
+    /* background-color: rgba(255, 255, 255, 0.08); */
+    /* background-color: rgba(255, 255, 255, 0.08); */
 }
 
 .name {
