--- a/src/layout/Header/header.module.css
+++ b/src/layout/Header/header.module.css
@@ -1,7 +1,7 @@
 .root {
     padding: 0 1rem;
     height: 6.4rem;
-    background-color: rgb(116, 103, 239);
+    background-color: #287cf2;
     display: flex;
     align-items: center;
     color: #fff;
