--- a/src/layout/SideBar/sidebar.module.css
+++ b/src/layout/SideBar/sidebar.module.css
@@ -4,7 +4,7 @@
     max-width: 100vw;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
     padding: 20px;
-    background: #232944;
+    /* background: #232944; */
     color: #fff;
     transform: all 0.2s;
 }
@@ -62,6 +62,12 @@
     padding: 10px 16px;
     overflow: hidden;
     width: 100%;
+    color: #000;
+    transition: all 0.2s;
+}
+
+.item:hover {
+    background-color: #287cf2;
     color: #fff;
 }
 
@@ -77,7 +83,7 @@
 }
 
 .btn:hover {
-    background-color: rgba(255, 255, 255, 0.08);
+    /* background-color: rgba(255, 255, 255, 0.08); */
 }
 
 .itemActive {
