--- a/src/layout/SideBar/sidebar.module.css
+++ b/src/layout/SideBar/sidebar.module.css
@@ -4,7 +4,7 @@
     max-width: 100vw;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
     padding: 20px;
-    /* background: #232944; */
+    background: #fff;
     color: #fff;
     transform: all 0.2s;
 }
