--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&family=Roboto:wght@400;500;700&display=swap");
+
 html {
     font-size: 62.5%;
 }
 
 * {
+    font-family: "Open Sans", sans-serif;
     box-sizing: border-box;
 }
 
