--- a/src/layout/SideBar/sidebar.module.css
+++ b/src/layout/SideBar/sidebar.module.css
@@ -1,12 +1,14 @@
 .root {
     height: 100vh;
-    width: 300px;
+    width: 320px;
     max-width: 100vw;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
     padding: 20px;
     background: #fff;
     color: #fff;
     transform: all 0.2s;
+    position: sticky;
+    top: 0;
 }
 
 .root.hide {
@@ -53,10 +55,10 @@
 
 .item {
     display: flex;
-    height: 44px;
+    min-height: 44px;
     border-radius: 4px;
     margin-bottom: 0.5rem;
-    align-items: center;
+    align-items: flex-start;
     justify-content: flex-start;
     gap: 15px;
     padding: 10px 16px;
@@ -80,6 +82,7 @@
     width: 100%;
     border: none;
     background-color: transparent;
+    margin-top: 1rem;
 }
 
 .btn:hover {
