fe - overview page - fix api, add 404 page

--- a/src/pages/Overview/overview.module.css
+++ b/src/pages/Overview/overview.module.css
@@ -8,6 +8,11 @@
     grid-template-columns: repeat(4, 1fr);
 }
 
+.title {
+    font-weight: 600;
+    margin-bottom: 500;
+}
+
 .compareRevenue {
     padding: 2rem;
     margin-top: 5rem;
