--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ html {
 }
 
 * {
-    font-family: "Open Sans", sans-serif;
+    font-family: "Roboto", sans-serif;
     box-sizing: border-box;
 }
 
