--- a/src/components/Print/PrintPage/printPage.module.css
+++ b/src/components/Print/PrintPage/printPage.module.css
@@ -1,3 +1,10 @@
+.header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 .printWrapper {
     display: block !important;
     height: 0px;
@@ -6,6 +13,12 @@
 .logo {
     margin-bottom: 1rem;
 }
+
+.footer {
+    margin-top: 1rem;
+    text-align: center;
+}
+
 @media print {
     .printWrapper {
         height: auto;
