--- a/src/components/Revenue/RevenueList/revenueList.module.css
+++ b/src/components/Revenue/RevenueList/revenueList.module.css
@@ -1,7 +1,42 @@
 .root {
-    margin: 3rem;
+    padding: 1.5rem 2.5rem;
+    background: var(--bg-1);
+    border-radius: 10px;
 }
 
 .header {
-    margin: 2rem 0;
+    padding: 1.5rem;
+    background: #fff;
+    margin-bottom: 2rem;
+    border-radius: 10px;
+    box-shadow: 0px 10px 40px rgb(0 0 0 / 12%);
+}
+
+.btn {
+    border: none;
+    outline: none;
+    border-radius: 10px;
+    width: 4rem;
+    height: 4rem;
+    background: none;
+}
+
+.btn svg {
+    width: 2rem;
+    height: 2rem;
+    color: var(--blue);
+}
+
+.btn.delete svg {
+    color: red;
+}
+
+.btn.view svg {
+    color: #000;
+}
+
+@media (max-width: 768px) {
+    .btnAdd {
+        padding: 1rem 2rem;
+    }
 }
