--- a/src/layout/SideBar/sidebar.module.css
+++ b/src/layout/SideBar/sidebar.module.css
@@ -1,14 +1,14 @@
 .root {
     height: 100vh;
-    width: 320px;
+    width: 350px;
     max-width: 100vw;
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
     padding: 20px;
     background: #fff;
     color: #fff;
-    transform: all 0.2s;
     position: sticky;
     top: 0;
+    transition: all 0.2s;
+    overflow: auto;
 }
 
 .root.hide {
@@ -24,7 +24,7 @@
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.2);
-    z-index: 1;
+    z-index: 3;
 }
 
 .toggleBtn {
@@ -39,7 +39,8 @@
     left: 2rem;
     width: 5rem;
     height: 5rem;
-    z-index: 2;
+    z-index: 4;
+    font-size: 1.6rem;
 }
 
 .LogoRoot {
@@ -58,7 +59,7 @@
     min-height: 44px;
     border-radius: 4px;
     margin-bottom: 0.5rem;
-    align-items: flex-start;
+    align-items: center;
     justify-content: flex-start;
     gap: 15px;
     padding: 10px 16px;
@@ -66,17 +67,26 @@
     width: 100%;
     color: #000;
     transition: all 0.2s;
+    border-radius: 1rem;
+}
+
+.itemRoot {
+    margin-bottom: 2rem;
 }
 
 .itemRoot,
 .item:hover {
-    background-color: #287cf2;
+    background-color: var(--blue);
     color: #fff;
 }
 
+.item:hover > img {
+    filter: invert(1);
+}
+
 .itemName {
-    font-size: 1.4rem;
-    font-weight: 500;
+    font-size: 1.5rem;
+    font-weight: 600;
 }
 
 .btn {
@@ -91,9 +101,27 @@
 }
 
 .itemActive {
-    background: #7467ef !important;
     color: #fff !important;
     border-radius: 4px !important;
+    background-color: var(--blue);
+}
+
+.itemActive .item {
+    color: #fff;
+}
+
+.itemActive .item img {
+    filter: invert(1);
+}
+
+.icon svg {
+    width: 2rem;
+    height: 2rem;
+}
+
+.icon {
+    width: 25px;
+    height: 25px;
 }
 
 @media (max-width: 1025px) {
@@ -101,6 +129,6 @@
         position: fixed;
         left: 0;
         height: 100%;
-        z-index: 1;
+        z-index: 3;
     }
 }
