--- a/src/components/Revenue/RevenueStatistic/revenueStatistic.module.css
+++ b/src/components/Revenue/RevenueStatistic/revenueStatistic.module.css
@@ -3,9 +3,19 @@
 }
 
 .header {
-    margin: 2rem 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 3rem;
 }
 
+.heading {
+    margin-bottom: 2rem;
+    text-align: center;
+    font-weight: bold;
+    font-size: 2rem;
+}
 .main {
     margin-top: 5rem;
 }
