--- a/src/layout/Header/header.module.css
+++ b/src/layout/Header/header.module.css
@@ -15,6 +15,12 @@
     border-radius: 10px;
 }
 
+.title {
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 30px;
+}
+
 .right {
     margin-left: auto;
     margin-right: 10px;
