--- a/src/components/Revenue/RevenueForm/revenueForm.module.css
+++ b/src/components/Revenue/RevenueForm/revenueForm.module.css
@@ -15,6 +15,13 @@
     box-shadow: 0px 10px 40px rgb(0 0 0 / 12%);
 }
 
+.main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
 .form {
     background-color: #fff;
     padding: 3rem 2rem 2rem 3rem !important;
